--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -53,6 +53,7 @@ SET(UNIT_TEST_NAMES
     testMatrixTypes
     testPreconditionerTypes
     testLinearSolver
+    testLinearSolver_Multigrid
     testEigenvalueSolver
     testODESolver
     testAndersonAcceleration
